--- a/giaodien_chinh2.html
+++ b/giaodien_chinh2.html
@@ -7,7 +7,7 @@
     <title>TopCV</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&amp;display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="giaodien_chinh.css">
+    <link rel="stylesheet" href="giaodien_chinh2.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <style>
         /* style.css */
@@ -22,8 +22,7 @@
             /* Đảm bảo nội dung hiển thị trên hiệu ứng tuyết */
         }
 
-  
-
+ 
 
 
 
