--- a/chi_tiet.html
+++ b/chi_tiet.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&amp;display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="/ChiTiet.css">
+    <link rel="stylesheet" href="/chi_tiet.css">
     <style>
     body {
         /* font-family: Arial, sans-serif; */
