--- a/giaodien_chinh2.html
+++ b/giaodien_chinh2.html
@@ -56,7 +56,7 @@
 
 
     <div class="search-section">
-        <h1>Tìm cơ sở thực tập cho sinh viên Trường Đại Học Tài Nguyên Môi Trường Hà Nội </h1>
+        <h1>TÌM CƠ SỞ THỰC TẬP CHO SINH VIÊN TRƯỜNG ĐẠI HỌC TÀI NGUYÊN VÀ MÔI TRƯỜNG HÀ NỘI</h1>
         <p>Tiếp cận 40,000+ tin tuyển dụng việc làm mỗi ngày từ hàng nghìn doanh nghiệp uy tín tại Việt Nam</p>
 
         <div class="search-bar">
