--- a/giaodien_chinh2.html
+++ b/giaodien_chinh2.html
@@ -58,7 +58,7 @@
                 src="/logo.png"
                 width="100%" />
         </div>
-        
+        ddddd
         <div>
           
         </div>
@@ -82,13 +82,8 @@
 <!-- #b3b8bd -->
 
     <div class="search-section">
-<<<<<<< HEAD
-        <h1>TÌM CƠ SỞ THỰC TẬP CHO SINH VIÊN TRƯỜNG ĐẠI HỌC TÀI NGUYÊN VÀ MÔI TRƯỜNG HÀ NỘI</h1>
-        <p>Tiếp cận 40,000+ tin tuyển dụng việc làm mỗi ngày từ hàng nghìn doanh nghiệp uy tín tại Việt Nam</p>
-=======
         <h1>Tìm cơ sở thực tập cho sinh viên Trường Đại Học Tài Nguyên Môi Trường Hà Nội </h1>
         <p style="margin-left: 5%;">Tiếp cận 40,000+ tin tuyển dụng việc làm mỗi ngày từ hàng nghìn doanh nghiệp uy tín tại Việt Nam</p>
->>>>>>> c31c1958c228aac966797531ba4b5b778f752e5a
 
         <div class="search-bar">
             <input placeholder="Tất cả tỉnh/thành phố" type="text" />
