--- a/quanly/giaodien_admin.html
+++ b/quanly/giaodien_admin.html
@@ -539,7 +539,7 @@
 
 </script>
 
-   <script src="./js/giaodienchinh.js" ></script>
+   <script src="../js/giaodienchinh.js" ></script>
   <!-- của slide -->
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
