--- a/quanly/giaodien_giangvien.html
+++ b/quanly/giaodien_giangvien.html
@@ -242,8 +242,8 @@
 
 
         <div class="nav">
-            <!-- <a href="#">Việc làm </a>
-            <a href="#">Hồ sơ &amp; CV</a> -->
+            <a href="#">Việc làm </a>
+            <a href="#">Hồ sơ &amp; CV</a>
             <a class="btn" href="./formdangnhaodangky.html">Đăng nhập</a>
             <a class="btn" href="#">Đăng ký</a>
             <a class="" href="#"><i class="fa-solid fa-user"></i> </a>
