--- a/silde.html
+++ b/silde.html
@@ -21,6 +21,7 @@
     font-size: 24px;
     color: #27ae60;
     margin-bottom: 10px;
+    
 }
 
 .featured-industries p {
@@ -65,15 +66,18 @@
     height: auto; /* Cho phép tự động giãn theo nội dung */
 }
 
+/* vua sua 9: 0000 */
+
 .industry-card img {
     width: 50px;
     
-    margin: 0 auto;
+    margin: 0 auto 10px;
+    display: block;
 }
 .industry-card h3 {
     font-size: 18px;
     color: #333;
-    margin: 10px 0; /* Khoảng cách đều */
+    margin: 30px 0 5px; /* Khoảng cách đều */
 }
 
 .industry-card p {
@@ -130,6 +134,7 @@
 }
 
 
+
     </style>
 </head>
 <body>
@@ -139,9 +144,9 @@
         <p>Bạn muốn tìm việc mới? Xem danh sách việc làm <a href="#">tại đây</a></p>
         <div class="industries-grid responsive" style="">
           <div class="industry-card">
-            <img src="icon-sales.png" alt="Kinh doanh - Bán hàng">
+            <img src="icon-marketing.png" alt="Marketing - PR - Quảng cáo">
             <h3>Khoa Kinh Tế</h3>
-            <p>8.673 việc làm</p>
+            <p>4.985 việc làm</p>
           </div>
   
           <div class="industry-card">
@@ -160,9 +165,9 @@
             <p>2.855 việc làm</p>
           </div>
           <div class="industry-card">
-            <img src="icon-finance.png" alt="Tài chính - Ngân hàng">
-            <h3>Khoa địa trắc</h3>
-            <p>818 việc làm</p>
+            <img src="icon-customer-service.png" alt="Chăm sóc khách hàng">
+            <h3>Khoa Địa trắc</h3>
+            <p>1.796 việc làm</p>
           </div>
           <div class="industry-card">
             <img src="icon-it.png" alt="Công nghệ Thông tin">
