--- a/quanly/giaodien_admin.html
+++ b/quanly/giaodien_admin.html
@@ -330,7 +330,7 @@
     <section class="featured-industries">
       <h2>Các Khoa và bộ môn</h2>
       <p>Bạn muốn tìm việc mới? Xem danh sách việc làm <a href="#">tại đây</a></p>
-      <div class="industries-grid responsive" style="">
+      <div class="industries-grid responsive">
         <div class="industry-card">
           <img src="icon-sales.png" alt="Kinh doanh - Bán hàng">
           <h3>Khoa Kinh Tế</h3>
