--- a/giaodien_chinh.html
+++ b/giaodien_chinh.html
@@ -163,8 +163,8 @@
     <div class="nav">
         <a href="#">Việc làm</a>
         <a href="#">Hồ sơ &amp; CV</a>
-        <a class="btn" href="./formdangnhaodangky.html">Đăng nhập</a>
-        <a class="btn" href="#">Đăng ký</a>
+        <a class="btn" href="./form_dn.html">Đăng nhập</a>
+        <a class="btn" href="./form_dk.html">Đăng ký</a>
         <a href="#"><i class="fa-solid fa-user"></i></a>
     </div>
 </div>
@@ -198,9 +198,9 @@
            <div class="danhmuc_1_option">Cong nghe thong tin <a class="cach" href=""><i class="fa-solid fa-angle-right"></i></a>
                  <div class="danhmuc_1_option_child">a123443bc</div>
            </div>
-           <div class="danhmuc_1_option">Cong nghe thong tin <a class="cach" href=""><i class="fa-solid fa-angle-right"></i></a> 
+           <!-- <div class="danhmuc_1_option">Cong nghe thong tin <a class="cach" href=""><i class="fa-solid fa-angle-right"></i></a> 
                  <div class="danhmuc_1_option_child">a123443bc</div>
-          </div>
+          </div> -->
                   <div class="danhmuc_1_heder">
                     <div class="danhmuc_1_heder-pag">
                       <div class="danhmuc_1_heder-text">1/4</div>
@@ -329,7 +329,7 @@
     <section class="featured-industries">
       <h2>Các Khoa và bộ môn</h2>
       <p>Bạn muốn tìm việc mới? Xem danh sách việc làm <a href="#">tại đây</a></p>
-      <div class="industries-grid responsive" style="">
+      <div class="industries-grid responsive">
         <div class="industry-card">
           <img src="icon-sales.png" alt="Kinh doanh - Bán hàng">
           <h3>Khoa Kinh Tế</h3>
