--- a/giaodien_chinh.html
+++ b/giaodien_chinh.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>TopCV</title>
+    <title>Ql_csthcsth</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&amp;display=swap" rel="stylesheet" />
 
@@ -84,10 +84,12 @@
     <h1>Tìm cơ sở thực tập cho sinh viên Trường Đại Học Tài nguyên và Môi trường Hà Nội</h1>
     <p>Tiếp cận 40,000+ tin tuyển dụng việc làm mỗi ngày từ hàng nghìn doanh nghiệp uy tín tại Việt Nam</p>
    </div>
-  <div class="search-bar">
-    <input type="text" placeholder="Tất cả Tỉnh/Thành phố" />
-    <button>Tìm kiếm</button>
-  </div>
+
+     <div class="aa">
+      <div class="search-bar">
+          <input type="text" placeholder="Tất cả Tỉnh/Thành phố" />
+          <button>Tìm kiếm</button>
+      </div>
 
        <div class="danhmuc">
          <div class="danhmuc_1">
@@ -95,13 +97,13 @@
                  <div class="danhmuc_1_option_child">abc</div>
             </div>
             <div class="danhmuc_1_option">Cong nghe thong tin <a class="cach" href=""><i class="fa-solid fa-angle-right"></i></a> 
-                 <div class="danhmuc_1_option_child">a123443bc</div>
+                 <div class="danhmuc_1_option_child">a1c</div>
             </div>
             <div class="danhmuc_1_option">Cong nghe thong tin <a class="cach" href=""><i class="fa-solid fa-angle-right"></i></a> 
-                 <div class="danhmuc_1_option_child">a123443bc</div>
+                 <div class="danhmuc_1_option_child">a12ee3bc</div>
            </div>
            <div class="danhmuc_1_option">Cong nghe thong tin <a class="cach" href=""><i class="fa-solid fa-angle-right"></i></a>
-                 <div class="danhmuc_1_option_child">a123443bc</div>
+                 <div class="danhmuc_1_option_child">a1fffs43bc</div>
            </div>
            <!-- <div class="danhmuc_1_option">Cong nghe thong tin <a class="cach" href=""><i class="fa-solid fa-angle-right"></i></a> 
                  <div class="danhmuc_1_option_child">a123443bc</div>
@@ -116,12 +118,16 @@
                     </div>
                   </div>
            </div>
+
+           <div class="a">
+            <div>
+                 <img src="./img/469877645_1005404278278078_3153280250481528893_n.jpg" alt="">
+            </div>
+           </div>
+
         </div>
-        <div class="a" style="background-color: aquamarine;">
-                   <div>
-                    <h3>img</h3>
-                   </div>
-        </div>
+      
+   </div>
   </div>
 </div>
 
