--- a/quanly/giaodien_ql.html
+++ b/quanly/giaodien_ql.html
@@ -122,14 +122,14 @@ textarea {
             <li class="nav-item">
                 <a class="nav-link" href="charts.html">
                     <i class="fas fa-fw fa-chart-area"></i>
-                    <span>Quản lý sinh vien</span></a>
+                    <span>Thông tin sinh viên</span></a>
             </li>
 
             <!-- Nav Item - Tables -->
             <li class="nav-item">
                 <a class="nav-link" href="tables.html">
                     <i class="fas fa-fw fa-table"></i>
-                    <span>Tables</span></a>
+                    <span></span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="tables.html">
