--- a/quanly_admin/giaodien_admin.html
+++ b/quanly_admin/giaodien_admin.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Internships Dashboard</title>
-    <link rel="stylesheet" href="/quanly/giaodien_admin2.css">
+    <link rel="stylesheet" href="/quanly_admin/giaodien_admin.css">
 </head>
 
 <body>
     <div class="container">
         <header>
             <!-- <img src="/logo.png" alt=""> -->
-            <h1>Thực Tập Sinh Viên</h1>
+            <h1>Quản lý</h1>
             <nav>
                 <!-- <button class="btn">DHAHPAND</button> -->
-                <button class="btn red">Số Lượng Sinh Viên</button>
+                <!-- <button class="btn red">Số Lượng Sinh Viên</button>
                 <button class="btn blue">Số cơ sở thực tập</button>
-                <button class="btn blue">Số đơn đăng ký</button>
+                <button class="btn blue">Số đơn đăng ký</button> -->
                 <button class="btn blue">Đăng xuất</button>
             </nav>
         </header>
