--- a/form_dk.html
+++ b/form_dk.html
@@ -24,10 +24,10 @@
                     <label>Họ và tên</label>
                     <input type="text" placeholder="Nhập họ tên">
                 </div>
-                <div class="input-group">
+                <!-- <div class="input-group">
                     <label>Mã sinh viên</label>
                     <input type="number" placeholder="Nhập mã sinh viên">
-                </div>
+                </div> -->
                 <div class="input-group">
                     <label>Email</label>
                     <input type="email" placeholder="Nhập email">
@@ -40,6 +40,17 @@
                 <div class="input-group">
                     <label>Xác nhận mật khẩu</label>
                     <input type="password" placeholder="Nhập lại mật khẩu">
+                </div>
+ 
+                <div class="checkbox-group">
+                    <input type="radio" id="sinhvien" name="user_type">
+                    <label for="sinhvien">Sinh viên</label>
+                
+                    <input type="radio" id="giangvien" name="user_type">
+                    <label for="giangvien">Giảng viên</label>
+                
+                    <input type="radio" id="coso" name="user_type">
+                    <label for="coso">Cơ sở thực tập</label>
                 </div>
 
                 <div class="checkbox-group">
