--- a/quanly_admin/giaodien_admin.html
+++ b/quanly_admin/giaodien_admin.html
@@ -9,6 +9,11 @@
 
 <body>
     <h2>hieu123</h2>
+    <h2>....
+        
+    </h2>
+    <h1>viet 5:46</h1>
+    <h2>kk 5:77</h2>
     <div class="container">
         <header>
             <!-- <img src="/logo.png" alt=""> -->
