--- a/quanly_admin/giaodien_admin.html
+++ b/quanly_admin/giaodien_admin.html
@@ -12,6 +12,7 @@
         <header>
             <!-- <img src="/logo.png" alt=""> -->
             <h1>Quản lý</h1>
+            <h1>ABC</h1>
             <nav>
                 <!-- <button class="btn">DHAHPAND</button> -->
                 <!-- <button class="btn red">Số Lượng Sinh Viên</button>
