--- a/giaodien_chung.html
+++ b/giaodien_chung.html
@@ -90,6 +90,7 @@
           <input type="text" placeholder="Tất cả Tỉnh/Thành phố" />
           <button>Tìm kiếm</button>
       </div>
+      
       <div class="danhmuc-container">
        <div class="danhmuc">
          <div class="danhmuc_1">
@@ -334,7 +335,7 @@
       <div class="slider">
           <div class="slides">
               <img class="hoo" src="/anh.png" alt="Image 1" />
-              <img class="hoo" src="/trg.png" alt="Image 2" />
+              <img class="hoo" src="/img/anh_mag.jpg" alt="Image 2" />
               <img class="hoo" src="/header-bg.webp" alt="Image 3" />
               <img class="hoo" src="./img/469877645_1005404278278078_3153280250481528893_n.jpg" alt="Image 4" />
           </div>
