--- a/giaodien_sinhvien.html
+++ b/giaodien_sinhvien.html
@@ -452,7 +452,7 @@
 </script>
 
    <script src="./js/giaodienchinh.js" ></script>
-  <!-- của slide -->
+  <!-- của slide -->`
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
   <script>
