--- a/quanly_admin/duyet_tt.html
+++ b/quanly_admin/duyet_tt.html
@@ -20,7 +20,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
-    <link rel="stylesheet" href="giaodien_admin.css" />
+    <link rel="stylesheet" href="./duyet_tt.css" />
     <style></style>
   </head>
   <body>
@@ -84,34 +84,31 @@
         </div>
       </div>
 
-      <div class="dashboard-content">
-        <div class="card">
-          <h3>Nhân sự: 47</h3>
-          <p>Giáo viên: 43 | Quản lý: 3 | Nhân viên: 1</p>
-          <canvas id="staffChart"></canvas>
-        </div>
-        <div class="card">
-          <h3>Học sinh: 557</h3>
-          <p>
-            Khối 1: 103 | Khối 2: 131 | Khối 3: 103 | Khối 4: 104 | Khối 5: 111
-          </p>
-          <canvas id="studentsChart"></canvas>
-        </div>
-        <div class="card">
-          <h3>Lớp học: 15</h3>
-          <p>Khối 1 - 3 lớp | Khối 2 - 3 lớp | Khối 3 - 3 lớp</p>
-          <canvas id="classesChart"></canvas>
-        </div>
-        <div class="card">
-          <h3>Thời khóa biểu</h3>
-          <p>Không có dữ liệu</p>
-        </div>
-        <div class="card" style="grid-column: span 2">
-          <h3>Bảng tin</h3>
-          <p>Thông báo hệ thống cập nhật vào ngày 18/09/2024</p>
-        </div>
-      </div>
-    </div>
+  <!-- Form Duyệt Thông Tin Tuyển Dụng -->
+  <div class="form-container">
+    <h2>Duyệt Danh Sách Công Ty</h2>
+    <table border="1">
+        <thead>
+            <tr>
+                <th>Tên Công Ty</th>
+                <th>Email</th>
+                <th>Điện Thoại</th>
+                <th>Vị Trí Tuyển Dụng</th>
+                <th>Website</th>
+                <th>Ngày Gửi</th>
+                <th>Trạng Thái</th>
+                <th>Hành Động</th>
+            </tr>
+        </thead>
+        <tbody id="company-list">
+            <!-- Dữ liệu công ty sẽ được đổ vào đây -->
+        </tbody>
+    </table>
+</div>
+  
+
+  </div>
+   
 
     <script>
       function toggleSidebar() {
@@ -125,54 +122,61 @@
         sidebar.classList.toggle("collapsed");
         content.classList.toggle("collapsed");
       }
+// mm,
+let companies = [
+            { id: 1, name: "Công Ty ABC", email: "abc@gmail.com", phone: "0123456789", position: "Lập trình viên", website: "https://abc.com", status: "Chờ duyệt" },
+            { id: 2, name: "Công Ty XYZ", email: "xyz@gmail.com", phone: "0987654321", position: "Marketing", website: "https://xyz.com", status: "Chờ duyệt" }
+        ];
 
-      new Chart(document.getElementById("staffChart"), {
-        type: "doughnut",
-        data: {
-          labels: ["Giáo viên", "Quản lý", "Nhân viên"],
-          datasets: [
-            {
-              data: [43, 3, 1],
-              backgroundColor: ["#3498db", "#e74c3c", "#2ecc71"],
-            },
-          ],
-        },
-      });
+        function loadCompanies() {
+            const companyList = document.getElementById("company-list");
+            companyList.innerHTML = "";
 
-      // Vẽ biểu đồ Học sinh
-      new Chart(document.getElementById("studentsChart"), {
-        type: "bar",
-        data: {
-          labels: ["Khối 1", "Khối 2", "Khối 3", "Khối 4", "Khối 5"],
-          datasets: [
-            {
-              label: "Số học sinh",
-              data: [103, 131, 103, 104, 111],
-              backgroundColor: "#f39c12",
-            },
-          ],
-        },
-        options: {
-          responsive: true,
-          scales: {
-            y: { beginAtZero: true },
-          },
-        },
-      });
+            companies.forEach((company, index) => {
+                let row = `
+                    <tr>
+                        <td>${company.name}</td>
+                        <td>${company.email}</td>
+                        <td>${company.phone}</td>
+                        <td>${company.position}</td>
+                        <td><a href="${company.website}" target="_blank">Xem Website</a></td>
+                        <td>${company.status}</td>
+                        <td>
+                            <button onclick="approve(${index})">✅ Phê duyệt</button>
+                            <button onclick="reject(${index})">❌ Từ chối</button>
+                        </td>
+                    </tr>
+                `;
+                companyList.innerHTML += row;
+            });
+        }
 
-      // Vẽ biểu đồ Lớp học
-      new Chart(document.getElementById("classesChart"), {
-        type: "pie",
-        data: {
-          labels: ["Khối 1", "Khối 2", "Khối 3"],
-          datasets: [
-            {
-              data: [3, 3, 3],
-              backgroundColor: ["#1abc9c", "#9b59b6", "#e67e22"],
-            },
-          ],
-        },
-      });
+        function approve(index) {
+            companies[index].status = "Đã duyệt";
+            saveToLocalStorage();
+            loadCompanies();
+        }
+
+        function reject(index) {
+            companies.splice(index, 1); // Xóa công ty khỏi danh sách
+            saveToLocalStorage();
+            loadCompanies();
+        }
+
+        function saveToLocalStorage() {
+            localStorage.setItem("approvedCompanies", JSON.stringify(companies));
+        }
+
+        function loadFromLocalStorage() {
+            const savedData = localStorage.getItem("approvedCompanies");
+            if (savedData) {
+                companies = JSON.parse(savedData);
+            }
+            loadCompanies();
+        }
+
+        window.onload = loadFromLocalStorage;
+     
     </script>
   </body>
 </html>
