--- a/quanly_giangvien/giaodien_giangvien.html
+++ b/quanly_giangvien/giaodien_giangvien.html
@@ -16,16 +16,15 @@
   <body>
     <div class="sidebar" id="sidebar">
         <button class="toggle-btn" onclick="toggleSidebar()">☰</button>
-      <h2>
-        Để ảnh 
-      </h2>
-      <hr>
+        <div class="icons">
+          <i class="fa-solid fa-circle-user"></i>
+         </div>
+      
       <div class="menu">
-        <h2>
-          Quản lý 
-        </h2>
+        
         <hr>
         <ul>
+          <h2>Quản lý </h2>
           <li><i class="fa-brands fa-windows"></i><a href="">Xem danh sách thực tập sinh</a></li>
           <li><i class="fa-brands fa-windows"></i><a href="">Theo dõi tiến độ thực tập</a></li>
           <li><i class="fa-brands fa-windows"></i><a href="">Chấm Điểm thuc tap</a></li>
@@ -79,6 +78,13 @@
     </div>
 
     <script>
+//sua for chu
+      function toggleSidebar() {
+          let sidebar = document.getElementById("sidebar");
+          sidebar.classList.toggle("collapsed");
+       }
+
+// thu nho than sidebar
       function toggleSidebar() {
         const sidebar = document.getElementById("sidebar");
         const content = document.getElementById("content");
